--- a/TradeHubGui/TradeHubGui.csproj
+++ b/TradeHubGui/TradeHubGui.csproj
@@ -139,6 +139,7 @@
     <Compile Include="Common\UIHelper.cs" />
     <Compile Include="Converters\InstanceExecutionStatusToBoolConverter.cs" />
     <Compile Include="Converters\OptimizationExecutionStatusToBrushConverter.cs" />
+    <Compile Include="Converters\ProviderConnectionStatusToBoolConverter.cs" />
     <Compile Include="Converters\ProviderConnectionStatusToBrushConverter.cs" />
     <Compile Include="Converters\OrderStatusToBrushConverter.cs" />
     <Compile Include="Converters\InstanceExecutionStatusToVisibilityConverter.cs" />
