(TH-182) Added code in order execution application layer for order requests.

--- a/TradeHubGui.Common/TradeHubGui.Common.csproj
+++ b/TradeHubGui.Common/TradeHubGui.Common.csproj
@@ -72,13 +72,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Constants\OptimizationStatus.cs" />
+    <Compile Include="Constants\OrderRequestType.cs" />
+    <Compile Include="Constants\OrderType.cs" />
     <Compile Include="Constants\ProviderType.cs" />
     <Compile Include="Constants\ServiceStatus.cs" />
     <Compile Include="Constants\SubscriptionType.cs" />
     <Compile Include="EventSystem.cs" />
     <Compile Include="Models\BruteForceParameters.cs" />
+    <Compile Include="Models\FillDetail.cs" />
+    <Compile Include="Models\OrderRequest.cs" />
     <Compile Include="Models\ProviderCredential.cs" />
-    <Compile Include="Models\ExecutionDetails.cs" />
+    <Compile Include="Models\StrategyExecutionDetails.cs" />
     <Compile Include="Models\GeneticAlgorithmResult.cs" />
     <Compile Include="Models\Provider.cs" />
     <Compile Include="Models\OptimizationStatistics.cs" />
