(TH-191) Added code to modify provider's credential values in their respective files.

--- a/TradeHubGui.Dashboard.Tests/TradeHubGui.Dashboard.Tests.csproj
+++ b/TradeHubGui.Dashboard.Tests/TradeHubGui.Dashboard.Tests.csproj
@@ -84,6 +84,7 @@
   <ItemGroup>
     <Compile Include="Integration\MarketDataControllerTests.cs" />
     <Compile Include="Integration\OrderExecutionControllerTests.cs" />
+    <Compile Include="Integration\ProvidersControllerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
