--- a/TradeHubGui.Dashboard.Tests/TradeHubGui.Dashboard.Tests.csproj
+++ b/TradeHubGui.Dashboard.Tests/TradeHubGui.Dashboard.Tests.csproj
@@ -62,6 +62,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ServiceProcess" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -85,6 +86,7 @@
     <Compile Include="Integration\MarketDataControllerTests.cs" />
     <Compile Include="Integration\OrderExecutionControllerTests.cs" />
     <Compile Include="Integration\ProvidersControllerTest.cs" />
+    <Compile Include="Integration\TradeHubServicesControllerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
