--- a/TradeHubGui.Dashboard/TradeHubGui.Dashboard.csproj
+++ b/TradeHubGui.Dashboard/TradeHubGui.Dashboard.csproj
@@ -53,6 +53,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ServiceProcess" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -79,16 +80,19 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Lib\tradehub\TradeHub.StrategyEngine.OrderExecution.dll</HintPath>
     </Reference>
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Managers\MarketDataManager.cs" />
     <Compile Include="Managers\MarketDataProvidersManager.cs" />
     <Compile Include="Managers\OrderExecutionManager.cs" />
     <Compile Include="Managers\OrderExecutionProvidersManager.cs" />
+    <Compile Include="Managers\TradeHubServicesManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\MarketDataController.cs" />
     <Compile Include="Services\OrderExecutionController.cs" />
     <Compile Include="Services\ProvidersController.cs" />
+    <Compile Include="Services\TradeHubServicesController.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TradeHubGui.Common\TradeHubGui.Common.csproj">
