--- a/TradeHubGui/TradeHubGui.csproj
+++ b/TradeHubGui/TradeHubGui.csproj
@@ -145,6 +145,7 @@
     <Compile Include="Converters\InstanceExecutionStatusToVisibilityConverter.cs" />
     <Compile Include="Converters\InstanceExecutionStatusToBrushConverter.cs" />
     <Compile Include="Converters\SelectedProviderToVisibilityConverter.cs" />
+    <Compile Include="Converters\StrategyIsSelectedToBrushConverter.cs" />
     <Compile Include="Converters\ServiceStatusToVisibilityConverter.cs" />
     <Compile Include="Converters\ServiceStatusToBrushConverter.cs" />
     <Compile Include="TemplateSelectors\CredentialsTemplateSelector.cs" />
