(TH-177) Cosmetic changes for send order window, added ProviderConnectionStatusToImageConverter, added new icons and used for provider connection status on dashboard

--- a/TradeHubGui/TradeHubGui.csproj
+++ b/TradeHubGui/TradeHubGui.csproj
@@ -140,6 +140,7 @@
     <Compile Include="Converters\InstanceExecutionStatusToBoolConverter.cs" />
     <Compile Include="Converters\OptimizationExecutionStatusToBrushConverter.cs" />
     <Compile Include="Converters\ProviderConnectionStatusToBoolConverter.cs" />
+    <Compile Include="Converters\ProviderConnectionStatusToImageConverter.cs" />
     <Compile Include="Converters\ProviderConnectionStatusToBrushConverter.cs" />
     <Compile Include="Converters\OrderStatusToBrushConverter.cs" />
     <Compile Include="Converters\InstanceExecutionStatusToVisibilityConverter.cs" />
