(TH-202) Modified code to separate OrderExecution provider from generic Provider class. Position Statistics model added. Added code to handle position stats on order executions for respective provider and symbol.

--- a/TradeHubGui.Common/TradeHubGui.Common.csproj
+++ b/TradeHubGui.Common/TradeHubGui.Common.csproj
@@ -80,7 +80,9 @@
     <Compile Include="EventSystem.cs" />
     <Compile Include="Models\BruteForceParameters.cs" />
     <Compile Include="Models\FillDetail.cs" />
+    <Compile Include="Models\OrderExecutionProvider.cs" />
     <Compile Include="Models\OrderRequest.cs" />
+    <Compile Include="Models\PositionStatistics.cs" />
     <Compile Include="Models\ProviderCredential.cs" />
     <Compile Include="Models\SendOrderModel.cs" />
     <Compile Include="Models\StrategyExecutionDetails.cs" />
