(TH-202) Added code in Order ViewModel to display order and position stats for the selected provider.

--- a/TradeHubGui.Dashboard.Tests/TradeHubGui.Dashboard.Tests.csproj
+++ b/TradeHubGui.Dashboard.Tests/TradeHubGui.Dashboard.Tests.csproj
@@ -81,6 +81,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Lib\tradehub\TradeHub.StrategyEngine.OrderExecution.dll</HintPath>
     </Reference>
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Integration\MarketDataControllerTests.cs" />
