--- a/TradeHubGui.Common/TradeHubGui.Common.csproj
+++ b/TradeHubGui.Common/TradeHubGui.Common.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Models\BruteForceParameters.cs" />
     <Compile Include="Models\FillDetail.cs" />
     <Compile Include="Models\LobRecord.cs" />
+    <Compile Include="Models\MarketDataProvider.cs" />
     <Compile Include="Models\OrderExecutionProvider.cs" />
     <Compile Include="Models\OrderRequest.cs" />
     <Compile Include="Models\PositionStatistics.cs" />
