--- a/TradeHubGui.Common/TradeHubGui.Common.csproj
+++ b/TradeHubGui.Common/TradeHubGui.Common.csproj
@@ -82,7 +82,6 @@
     <Compile Include="Models\BruteForceParameters.cs" />
     <Compile Include="Models\FillDetail.cs" />
     <Compile Include="Models\LimitOrderBookRecord.cs" />
-    <Compile Include="Models\LobRecord.cs" />
     <Compile Include="Models\MarketDataProvider.cs" />
     <Compile Include="Models\OrderExecutionProvider.cs" />
     <Compile Include="Models\OrderRequest.cs" />
@@ -98,7 +97,7 @@
     <Compile Include="Models\Strategy.cs" />
     <Compile Include="Models\StrategyInstance.cs" />
     <Compile Include="Models\SubscriptionRequest.cs" />
-    <Compile Include="Models\TickDetail.cs" />
+    <Compile Include="Models\MarketDataDetail.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utility\FileReader.cs" />
     <Compile Include="Utility\StrategyIdGenerator.cs" />
