--- a/TradeHubGui.Common/TradeHubGui.Common.csproj
+++ b/TradeHubGui.Common/TradeHubGui.Common.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Models\MarketDataDetail.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utility\FileReader.cs" />
+    <Compile Include="Utility\SortedObservableCollection.cs" />
     <Compile Include="Utility\StrategyIdGenerator.cs" />
     <Compile Include="ValueObjects\BruteForceParameterDetail.cs" />
     <Compile Include="ValueObjects\OptimizationParameterDetail.cs" />
