(TH-221) Added initial code and libraries for Data Downloader application layer code.

--- a/TradeHubGui.Common/TradeHubGui.Common.csproj
+++ b/TradeHubGui.Common/TradeHubGui.Common.csproj
@@ -80,7 +80,9 @@
     <Compile Include="Constants\SubscriptionType.cs" />
     <Compile Include="EventSystem.cs" />
     <Compile Include="Models\BruteForceParameters.cs" />
+    <Compile Include="Models\DataPersistenceInformation.cs" />
     <Compile Include="Models\FillDetail.cs" />
+    <Compile Include="ValueObjects\HistoricalBarDetail.cs" />
     <Compile Include="Models\LimitOrderBookRecord.cs" />
     <Compile Include="Models\MarketDataProvider.cs" />
     <Compile Include="Models\OrderExecutionProvider.cs" />
@@ -96,7 +98,8 @@
     <Compile Include="Models\ServiceDetails.cs" />
     <Compile Include="Models\Strategy.cs" />
     <Compile Include="Models\StrategyInstance.cs" />
-    <Compile Include="Models\SubscriptionRequest.cs" />
+    <Compile Include="ValueObjects\LiveBarDetail.cs" />
+    <Compile Include="ValueObjects\SubscriptionRequest.cs" />
     <Compile Include="Models\MarketDataDetail.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utility\FileReader.cs" />
