--- a/TradeHubGui.Dashboard/TradeHubGui.Dashboard.csproj
+++ b/TradeHubGui.Dashboard/TradeHubGui.Dashboard.csproj
@@ -73,6 +73,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Lib\tradehub\TradeHub.OrderExecutionEngine.Client.dll</HintPath>
     </Reference>
+    <Reference Include="TradeHub.StrategyEngine.HistoricalData, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Lib\tradehub\TradeHub.StrategyEngine.HistoricalData.dll</HintPath>
+    </Reference>
     <Reference Include="TradeHub.StrategyEngine.MarketData">
       <HintPath>..\Lib\tradehub\TradeHub.StrategyEngine.MarketData.dll</HintPath>
     </Reference>
