(TH-218) (TH-224) Updated WPF Toolkit Extended to version 2.4.0 and adapted styles, Added reference to System.Windows.Interactivity.dll from local Lib folder

--- a/Resources/Resources.csproj
+++ b/Resources/Resources.csproj
@@ -54,8 +54,9 @@
     <Reference Include="WPFToolkit">
       <HintPath>..\TradeHUB\Lib\WPFToolkit.dll</HintPath>
     </Reference>
-    <Reference Include="WPFToolkit.Extended">
-      <HintPath>..\TradeHUB\Lib\WPFToolkit.Extended.dll</HintPath>
+    <Reference Include="Xceed.Wpf.Toolkit, Version=2.4.0.0, Culture=neutral, PublicKeyToken=3e4669d2f30244f4, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Lib\Xceed.Wpf.Toolkit.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
