--- a/TradeHubGui.DataDownloader/TradeHubGui.DataDownloader.csproj
+++ b/TradeHubGui.DataDownloader/TradeHubGui.DataDownloader.csproj
@@ -30,6 +30,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Atomic">
+      <HintPath>..\Lib\helper\Disruptor.1.1.0\lib\net40\Atomic.dll</HintPath>
+    </Reference>
+    <Reference Include="Disruptor">
+      <HintPath>..\Lib\helper\Disruptor.1.1.0\lib\net40\Disruptor.dll</HintPath>
+    </Reference>
+    <Reference Include="Disruptor.Scheduler">
+      <HintPath>..\Lib\helper\Disruptor.1.1.0\lib\net40\Disruptor.Scheduler.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Prism.PubSubEvents">
+      <HintPath>..\packages\Prism.PubSubEvents.1.0.0\lib\portable-sl4+wp7+windows8+net40\Microsoft.Practices.Prism.PubSubEvents.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -43,16 +55,19 @@
     <Reference Include="TradeHub.Common.Core">
       <HintPath>..\Lib\tradehub\TradeHub.Common.Core.dll</HintPath>
     </Reference>
-    <Reference Include="TradeHub.DataDownloader.BinaryFileWriter">
-      <HintPath>..\Lib\tradehub\TradeHub.DataDownloader.BinaryFileWriter.dll</HintPath>
-    </Reference>
-    <Reference Include="TradeHub.DataDownloader.CsvFileWriter">
-      <HintPath>..\Lib\tradehub\TradeHub.DataDownloader.CsvFileWriter.dll</HintPath>
+    <Reference Include="TradeHub.Infrastructure.FileWriter">
+      <HintPath>..\Lib\tradehub\TradeHub.Infrastructure.FileWriter.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\DataPersistenceController.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TradeHubGui.Common\TradeHubGui.Common.csproj">
+      <Project>{5E5A9A79-0B0C-428B-8385-015134B42D86}</Project>
+      <Name>TradeHubGui.Common</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
