--- a/TradeHubGui.Common/TradeHubGui.Common.csproj
+++ b/TradeHubGui.Common/TradeHubGui.Common.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Constants\OrderRequestType.cs" />
     <Compile Include="Constants\OrderType.cs" />
     <Compile Include="Constants\ProviderType.cs" />
+    <Compile Include="Constants\Services.cs" />
     <Compile Include="Constants\ServiceStatus.cs" />
     <Compile Include="Constants\SubscriptionType.cs" />
     <Compile Include="EventSystem.cs" />
@@ -83,6 +84,7 @@
     <Compile Include="Models\BruteForceParameters.cs" />
     <Compile Include="Models\DataPersistenceInformation.cs" />
     <Compile Include="Models\FillDetail.cs" />
+    <Compile Include="Utility\GetEnumDescriptions.cs" />
     <Compile Include="ValueObjects\BarDetail.cs" />
     <Compile Include="ValueObjects\HistoricalBarParameters.cs" />
     <Compile Include="Models\LimitOrderBookRecord.cs" />
