--- a/TradeHubGui.StrategyRunner.Tests/TradeHubGui.StrategyRunner.Tests.csproj
+++ b/TradeHubGui.StrategyRunner.Tests/TradeHubGui.StrategyRunner.Tests.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>TradeHubGui.StrategyRunner.Tests</RootNamespace>
     <AssemblyName>TradeHubGui.StrategyRunner.Tests</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
