(TH-257) Modified code to solve the focus issue for provider connect/disconnect buttons

--- a/TradeHubGui.Common/TradeHubGui.Common.csproj
+++ b/TradeHubGui.Common/TradeHubGui.Common.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Models\GeneticAlgorithmParameters.cs" />
     <Compile Include="ValueObjects\ParameterDetail.cs" />
     <Compile Include="ValueObjects\StrategyInstanceStatus.cs" />
+    <Compile Include="ValueObjects\UiElement.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
