--- a/TradeHubGui/App.config
+++ b/TradeHubGui/App.config
@@ -11,8 +11,10 @@
   </configSections>
   <spring>
     <context>
+      <resource uri="~/SpringConfig/NotificationEngineClientSpringConfig.xml" />
       <resource uri="~/SpringConfig/MarketDataServiceSpringConfig.xml" />
       <resource uri="~/SpringConfig/HistoricalDataServiceSpringConfig.xml" />
+      <resource uri="~/SpringConfig/NotificationServiceSpringConfig.xml" />
       <resource uri="~/SpringConfig/OrderExecutionServiceSpringConfig.xml" />
       <resource uri="~/SpringConfig/BacktestingOrderExecutorConfig.xml" />
       <resource uri="~/SpringConfig/SpringDao.xml" />
