--- a/TradeHubGui/TradeHubGui.csproj
+++ b/TradeHubGui/TradeHubGui.csproj
@@ -149,6 +149,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Lib\tradehub\TradeHub.NotificationEngine.Common.dll</HintPath>
     </Reference>
+    <Reference Include="TradeHub.StrategyEngine.Notification">
+      <HintPath>..\Lib\tradehub\TradeHub.StrategyEngine.Notification.dll</HintPath>
+    </Reference>
     <Reference Include="TradeHub.StrategyEngine.Utlility">
       <HintPath>..\Lib\tradehub\TradeHub.StrategyEngine.Utlility.dll</HintPath>
     </Reference>
