(TH-315) Code refactoring for Tradier Build

--- a/TradeHubGui/App.config
+++ b/TradeHubGui/App.config
@@ -17,7 +17,7 @@
       <resource uri="~/SpringConfig/NotificationServiceSpringConfig.xml" />
       <resource uri="~/SpringConfig/OrderExecutionServiceSpringConfig.xml" />
       <resource uri="~/SpringConfig/BacktestingOrderExecutorConfig.xml" />
-      <resource uri="~/SpringConfig/SpringDao.xml" />
+      <!--<resource uri="~/SpringConfig/SpringDao.xml" />-->
       <resource uri="~/SpringConfig/MarketDataControllerSpringConfig.xml" />
       <resource uri="~/SpringConfig/OrderExecutionControllerSpringConfig.xml" />
     </context>
