--- a/TradeHubGui.Common/TradeHubGui.Common.csproj
+++ b/TradeHubGui.Common/TradeHubGui.Common.csproj
@@ -90,6 +90,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Constants\ConditionOperator.cs" />
     <Compile Include="Constants\DirectoryPath.cs" />
     <Compile Include="Constants\LobRecordType.cs" />
     <Compile Include="Constants\OptimizationStatus.cs" />
@@ -106,6 +107,8 @@
     <Compile Include="Models\DataPersistenceInformation.cs" />
     <Compile Include="Models\FillDetail.cs" />
     <Compile Include="Utility\GetEnumDescriptions.cs" />
+    <Compile Include="Utility\PriceAlertGenerator.cs" />
+    <Compile Include="ValueObjects\AlertMessage.cs" />
     <Compile Include="ValueObjects\BarDetail.cs" />
     <Compile Include="ValueObjects\HistoricalBarParameters.cs" />
     <Compile Include="Models\LimitOrderBookRecord.cs" />
@@ -124,6 +127,7 @@
     <Compile Include="Models\Strategy.cs" />
     <Compile Include="Models\StrategyInstance.cs" />
     <Compile Include="ValueObjects\BarParameters.cs" />
+    <Compile Include="ValueObjects\PriceAlertCondition.cs" />
     <Compile Include="ValueObjects\SubscriptionRequest.cs" />
     <Compile Include="Models\MarketDataDetail.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
