--- a/TradeHubGui/TradeHubGui.csproj
+++ b/TradeHubGui/TradeHubGui.csproj
@@ -456,6 +456,10 @@
       <Project>{ff91d752-e815-4994-9037-288c1fab2994}</Project>
       <Name>TradeHubGui.DataDownloader</Name>
     </ProjectReference>
+    <ProjectReference Include="..\TradeHubGui.IqFeedExtenstion\TradeHubGui.IqFeedExtenstion.csproj">
+      <Project>{2ccde7fc-7660-40bd-9d37-35bc13438948}</Project>
+      <Name>TradeHubGui.IqFeedExtenstion</Name>
+    </ProjectReference>
     <ProjectReference Include="..\TradeHubGui.StrategyRunner\TradeHubGui.StrategyRunner.csproj">
       <Project>{8090220c-f33f-46ea-ae6a-cdac8c921edd}</Project>
       <Name>TradeHubGui.StrategyRunner</Name>
